<resources>
    <string name="app_name">TeLoCuido</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="titulo_bienvenido">Bienvenido a\nTe Lo Cuido</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnResgistrarse">Registrarse</string>
    <string name="buscas_estacionar">¿Buscas estacionar?</string>
    <string name="btn_onboard">COMENZAR</string>
    <string name="copyright">Todos los derechos Reservados</string>
    <string name="title_click">Title click</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_wallet">Monedero</string>
    <string name="menu_history">Historial</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_exit">Salir</string>
    <string name="menu_group">Group</string>
    <string name="api_key">AIzaSyAL6XicOtTc11t57gRpT5PbhjfyaWHcxsQ</string>
    <string name="sv_buscar">¿Dónde quieres ir?</string>
    <string name="title_activity_maps2">Map</string>
    <string name="register_nombre">Nombre</string>
    <string name="register_apellido">Apellido</string>
    <string name="register_celular">Celular</string>
    <string name="register_Email">Email</string>
    <string name="register_contrasena">Contraseña</string>
    <string name="register_contrasena2">Confirmar Contraseña</string>
    <string name="register_btnEnviarDatos">Enviar Datos</string>
    <string name="liberar">Liberar Lugar</string>
    <string name="desea_liberar_el_lugar">"¿Deseas liberar el lugar ocupado?"</string>
    <string name="Promo_Liberar_lugar">PRAGA Restaurant Café .Plaza Independencia 1358.</string>
    <string name="NombreUSR_Liberar_Lugar">Pedro,</string>
    <string name="todo">TODO</string>
</resources>